--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,8 @@
 *{
+  @import url('https://fonts.googleapis.com/css?family=Hind');
   font-family: hind;
   font-weight: normal;
-  @import url(https://fonts.googleapis.com/css?family=Hind);
+
 }
 
 /*accueil*/
