--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,8 +1,8 @@
-*{
-  @import url('https://fonts.googleapis.com/css?family=Hind');
-  font-family: hind;
-  font-weight: normal;
+@import url('https://fonts.googleapis.com/css?family=Hind');
 
+*{
+  font-family: 'Hind';
+  font-weight: normal;
 }
 
 /*accueil*/
